--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 40vh;
-    background: hotpink;
+    background: turquoise;
 }
 
 #countdownTimer{
@@ -11,4 +11,23 @@ body{
     font-size: 5rem;
     font-weight: 800;
     font-family: sans-serif;
+    display: flex;
+    justify-content: center;
 }
+/* .company{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+.bottomImageContainer{
+display: flex;
+justify-content: center;
+align-content: center;
+height: 50px;
+/* margin: 30px;
+padding: 30px; */
+/* margin-bottom: 700px; */
+/* } */
+/* .bottomImage{
+    border-radius: 50%;
+} */ 
